After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796596 - videoaggregator: Fix string leak
videoaggregator: Fix string leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-06-15 13:54 UTC by Seungha Yang
Modified: 2018-06-15 14:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videoaggregator: Fix string leak (1.44 KB, patch)
2018-06-15 13:56 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2018-06-15 13:54:08 UTC
gst_video_colorimetry_to_string() returns allocated memory which
must be freed.
Comment 1 Seungha Yang 2018-06-15 13:56:33 UTC
Created attachment 372690 [details] [review]
videoaggregator: Fix string leak

Both master and 1.14 branches show this leak
Comment 2 Thibault Saunier 2018-06-15 14:19:01 UTC
Attachment 372690 [details] pushed as 9e981ed - videoaggregator: Fix string leak